[package]
name = "orml-utilities"
description = "Various utilities including `FixedU128` and `LinkedList`."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/utilities"
license = "Apache-2.0"
version = "0.7.0"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2021"

[dependencies]
scale-info = { workspace = true }
serde = { version = "1.0.136", optional = true, features = ["derive"] }
parity-scale-codec = {  version = "3.0.0", default-features = false, features = ["derive"] }

frame-support = { workspace = true }
sp-runtime = { workspace = true, features = ["serde"] }
sp-std = { workspace = true }
sp-io = { workspace = true }
sp-core = { workspace = true }

[dev-dependencies]
serde_json = "1.0.64"

frame-system = { workspace = true, features = ["std"] }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
