[package]
name = "orml-utilities"
description = "Various utilities including `FixedU128` and `LinkedList`."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/utilities"
license = "Apache-2.0"
version = "1.5.0"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2021"

[dependencies]
scale-info = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
parity-scale-codec = { workspace = true, default-features = false, features = ["derive"] }

frame-support = { workspace = true }
sp-runtime = { workspace = true, features = ["serde"] }
sp-std = { workspace = true }
sp-io = { workspace = true }
sp-core = { workspace = true }

frame-system = { workspace = true, features = ["std"] }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
