[package]
name = "orml-vesting"
description = "Provides scheduled balance locking mechanism, in a *graded vesting* way."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/vesting"
license = "Apache-2.0"
version = "0.7.0"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2021"

[dependencies]
parity-scale-codec = {  version = "3.0.0", default-features = false, features = ["max-encoded-len"] }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"frame-system/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
