[package]
name = "weight-gen"
description = "CLI for generating weight from bencher output"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.119", features = ['derive'] }
serde_json = "1.0"
clap = "3.0.0-beta.2"
handlebars = { version = "3.5.2" }

[features]
default = ["std"]
std = []
