[package]
name = "weight-gen"
description = "CLI for generating weight from bencher output"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
clap = "4.0.9"
handlebars = { version = "4.1.0" }

[features]
default = ["std"]
std = []
