[package]
name = "orml-weight-meter"
version = "0.4.1-dev"
license = "Apache-2.0"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.33" }
weight-meter-procedural = { path = "weight-meter-procedural", default-features = false }

[dev-dependencies]
serde = { version = "1.0.136" }
codec = { package = "parity-scale-codec", version = "3.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.33" }

[features]
default = ["std"]
std = [
	"scale-info/std",
	"frame-support/std",
	"weight-meter-procedural/std",
]
bench = [
	"weight-meter-procedural/bench",
]
