[package]
name = "orml-xcm-mock-message-queue"
description = "XCM Mock Message Qeueu for XCM Simulator tests"
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/xcm-mock-message-queue"
license = "Apache-2.0"
version = "0.6.7"
authors = ["Acala Developers"]
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

xcm = { workspace = true }
polkadot-parachain-primitives = { workspace = true }
cumulus-primitives-core = { workspace = true }

[dev-dependencies]

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",

	"cumulus-primitives-core/std",
	"frame-support/std",
	"frame-system/std",
	"polkadot-parachain-primitives/std",
	"sp-runtime/std",
	"sp-io/std",
	"xcm/std",
]
