[package]
name = "orml-xcm-support"
description = "Supporting module for XCM integration."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/xcm-support"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Acala Developers"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }

frame-support = { git = "https://github.com/mangata-finance/polkadot-sdk", default-features = false , branch = "develop" }
sp-runtime = { git = "https://github.com/mangata-finance/polkadot-sdk", default-features = false , branch = "develop" }
sp-std = { git = "https://github.com/mangata-finance/polkadot-sdk", default-features = false , branch = "develop" }

xcm = { package = "staging-xcm", git = "https://github.com/mangata-finance/polkadot-sdk", default-features = false , branch = "develop" }
xcm-executor = { package = "staging-xcm-executor", git = "https://github.com/mangata-finance/polkadot-sdk", default-features = false , branch = "develop" }

orml-traits = { path = "../traits", version = "0.4.1-dev", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"orml-traits/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-executor/std",
	"xcm/std",
]
