[package]
name = "orml-xcm-support"
description = "Supporting module for XCM integration."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/xcm-support"
license = "Apache-2.0"
version = "0.7.0"
authors = ["Acala Developers"]
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }

frame-support = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

xcm = { workspace = true }
xcm-executor = { workspace = true }

orml-traits = { path = "../traits", version = "0.7.0", default-features = false }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"orml-traits/std",
	"parity-scale-codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-executor/std",
	"xcm/std",
]
