[package]
name = "orml-xcm"
description = "XCM message helpers."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/xcm"
license = "Apache-2.0"
version = "0.4.1-dev"
authors = ["Acala Developers"]
edition = "2021"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.33" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.33" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.33" }

pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "release-v0.9.33" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "release-v0.9.33" }

[dev-dependencies]
xcm-executor  = { git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.33" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-xcm/std",
	"scale-info/std",
	"sp-std/std",
	"xcm/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-xcm/try-runtime",
]
