[package]
name = "orml-xcm"
description = "XCM message helpers."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/xcm"
license = "Apache-2.0"
version = "0.7.0"
authors = ["Acala Developers"]
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }

pallet-xcm = { workspace = true }
xcm = { workspace = true }

[dev-dependencies]
xcm-executor  = { workspace = true, features = ["std"] }

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"frame-system/std",
	"pallet-xcm/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-std/std",
	"xcm/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-xcm/try-runtime",
]
