[package]
name = "orml-xmulticurrency"
description = "Crosschain token transfer"
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/xmulticurrency"
license = "Apache-2.0"
version = "0.1.3-dev"
authors = ["Laminar Developers <hello@laminar.one>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false }

sp-std = { version = "2.0.0-rc5", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false}

frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch", default-features = false}

xcm = { git = "https://github.com/paritytech/polkadot", branch = "gav-xcmp", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot", branch = "gav-xcmp", default-features = false }

orml-traits = { path = "../traits", version = "0.1.3-dev", default-features = false }

[features]
default = ["std"]
std = [
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"xcm/std",
	"xcm-executor/std",
]
