[package]
name = "orml-xtokens"
description = "Cross-chain token transfer."
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/xtokens"
license = "Apache-2.0"
version = "0.5.0-dev"
authors = ["Acala Developers"]
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }
log = { workspace = true }
scale-info = { version = "2.9.0", default-features = false, features = ["derive"] }
serde = { workspace = true, optional = true }

# substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# cumulus
cumulus-primitives-core = { default-features = false , workspace = true }

# polkadot
pallet-xcm = { workspace = true }
xcm = { workspace = true }
xcm-executor = { workspace = true }

# orml
orml-traits = { path = "../traits", default-features = false}
orml-xcm-support = { path = "../xcm-support", default-features = false }

[dev-dependencies]
# substrate
pallet-balances = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
pallet-message-queue = { workspace = true, features = ["std"] }

# cumulus
cumulus-pallet-dmp-queue = { workspace = true, features = ["std"] }
cumulus-pallet-xcm = { workspace = true, features = ["std"] }
cumulus-pallet-xcmp-queue = { workspace = true, features = ["std"] }
cumulus-primitives-core = { workspace = true, features = ["std"] }
cumulus-pallet-parachain-system = { workspace = true, features = ["std"] }
parachain-info = { workspace = true, features = ["std"] }

# polkadot
polkadot-parachain-primitives = { workspace = true, features = ["std"] }
polkadot-runtime-parachains = { workspace = true, features = ["std"] }
polkadot-runtime-common = { workspace = true, features = ["std"] }
xcm-builder = { workspace = true, features = ["std"] }
xcm-simulator = { workspace = true }

# orml
orml-tokens = { path = "../tokens" }
orml-xcm = { path = "../xcm" }

[features]
default = [ "std" ]
std = [
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-core/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"orml-traits/std",
	"orml-xcm-support/std",
	"pallet-balances/std",
	"pallet-message-queue/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"parity-scale-codec/std",
	"polkadot-parachain-primitives/std",
	"polkadot-runtime-common/std",
	"polkadot-runtime-parachains/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
]
runtime-benchmarks = [
	"cumulus-pallet-parachain-system/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"orml-tokens/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"polkadot-parachain-primitives/runtime-benchmarks",
	"polkadot-runtime-common/runtime-benchmarks",
	"polkadot-runtime-parachains/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
]
try-runtime = [
	"cumulus-pallet-dmp-queue/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"orml-tokens/try-runtime",
	"orml-xcm/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-message-queue/try-runtime",
	"pallet-xcm/try-runtime",
	"parachain-info/try-runtime",
	"polkadot-runtime-common/try-runtime",
	"polkadot-runtime-parachains/try-runtime",
	"sp-runtime/try-runtime",
]
